--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,14 +1,17 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Release WildFly S2I Images to Quay.io
+
+env:
+  REGISTRY: quay.io
+  REGISTRY_USER: "jmesnil"
+  REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  release:
+    types:
+    - published
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -29,9 +32,12 @@ jobs:
         with:
           # Version of CEKit to install
           version: 3.2.1
-
       # Runs a single command using the runners shell
-      - name: Build Builder and Runtime images
-        run: |-
-          make
-          docker image ls
+      - name: Docker Login to Quay.io (master only)
+        uses: docker/login-action@v1.8.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ env.REGISTRY_USER }}
+          password: ${{ env.REGISTRY_PASSWORD }}
+      - name: Build and Push Image Tag
+        run: TAG=${GITHUB_REF##*/} make push
