--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,6 +3,7 @@
 name: Release WildFly S2I Images to Quay.io
 
 env:
+  S2I_URI: https://api.github.com/repos/openshift/source-to-image/releases/latest
   REGISTRY: quay.io
   REGISTRY_USER: "jmesnil"
   REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
@@ -32,6 +33,19 @@ jobs:
         with:
           # Version of CEKit to install
           version: 3.2.1
+      - name: install s2i binary
+        run: |
+          echo ===== Installing s2i from ${{ env.S2I_URL }} =====
+          mkdir /tmp/s2i/ && cd /tmp/s2i/
+          curl -s ${{ env.S2I_URI }} \
+           | grep browser_download_url \
+           | grep linux-amd64 \
+           | cut -d '"' -f 4 \
+           | wget -qi -
+           tar xvf source-to-image*.gz
+           sudo mv s2i /usr/bin
+           which s2i
+           s2i version
       - name: Build
         run: |
           make build
