--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,6 @@
 name: Wildfly s2i Image Deployment when a new version tag is created.
 on:
+  workflow_dispatch: {}
   push:
     branches:
       - "!*"
